--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "clsx": "^2.1.0",
-    "framer-motion": "^11.0.24",
+    "framer-motion": "11.0.3",
     "hamburger-react": "^2.5.0",
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
