--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.2",
+    "react-spring-carousel": "^2.0.19",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
